# decimal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  aliases.js  build.rs  circle.yml  index.html  justfile  search-index.js
decNumber/: decBasic.c  decCommon.c
decTest/: exp.decTest
decimal/: Rounding.t.html  all.html  d128.t.html  enum.Class.html  enum.Rounding.html  index.html  macro.d128!.html  macro.d128.html  sidebar-items.js  struct.Status.html  struct.d128.html
decimal-common/: Cargo.toml
decimal-common/src/: lib.rs
decimal-macros/: Cargo.toml  build.rs
decimal-macros/examples/: test.rs
decimal-macros/src/: lib.rs  plugin.rs
decimal-macros/tests/: test.rs  without_const_fn.rs
decimal/dec128/: struct.d128.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerExp.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.Extend.js  trait.FromIterator.js  trait.Sum.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/arith/: trait.Add.js  trait.AddAssign.js  trait.Div.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Neg.js  trait.Rem.js  trait.RemAssign.js  trait.Sub.js  trait.SubAssign.js
implementors/core/ops/bit/: trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.Not.js  (+5 more)
implementors/core/str/: trait.FromStr.js
implementors/ord_subset/: trait.OrdSubsetIterExt.js
implementors/ord_subset/ord_subset_trait/: trait.OrdSubset.js
implementors/rustc_serialize/serialize/: trait.Decodable.js  trait.Encodable.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
ord_subset/: OrdSubsetIterExt.t.html  OrdSubsetSliceExt.t.html  all.html  index.html  sidebar-items.js  struct.OrdVar.html  trait.OrdSubset.html  trait.OrdSubsetIterExt.html  trait.OrdSubsetSliceExt.html
ord_subset/iter_ext/: trait.OrdSubsetIterExt.html
ord_subset/ord_subset_trait/: OrdSubset.t.html  trait.OrdSubset.html
ord_subset/ord_var/: OrdVar.t.html  struct.OrdVar.html
ord_subset/slice_ext/: trait.OrdSubsetSliceExt.html
run_test/: all.html  index.html
src/: bytes.rs  context.rs  dec128.rs  dec64.rs  error.rs  get_bytes.rs  lib.rs  run_test.rs  to_string.rs
src/decimal/: context.rs.html  dec128.rs.html  lib.rs.html
src/ord_subset/: iter_ext.rs.html  lib.rs.html  ord_subset_trait.rs.html  ord_var.rs.html  slice_ext.rs.html
src/run_test/: run-test.rs.html
(+2 files in other folders)
