[package]
name = "decimal"
version = "2.1.5"
authors = ["Alkis Evlogimenos <alkis@evlogimenos.com>"]
build = "build.rs"
description = "Decimal floating point arithmetic for Rust"
repository = "https://github.com/alkis/decimal"
documentation = "https://alkis.github.io/decimal"
keywords = ["decimal", "decNumber"]
license = "Apache-2.0"
autobins = false

[lib]
name = "decimal"
path = "src/lib.rs"

[[bin]]
path = "src/get_bytes.rs"
name = "bytes"

[dependencies]
bitflags = "1"
libc = "0.2"
ord_subset = { optional = true, version = "3" }
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "1" }
clap = { features = [], version = "2" }
faster = { git = "https://github.com/AdamNiederer/faster", branch = "master", optional = true }
slog = { version = "2", optional = true }
approx = "0.1"

[features]
default = ["ord_subset", "serde", "slog"]

[build-dependencies]
cc = "1"

[dev-dependencies]
serde_json = "1"
rand = "0.4"

[profile.test]
opt-level = 2
