[package]
name = "decimal"
version = "2.0.4"
authors = ["Alkis Evlogimenos <alkis@evlogimenos.com>"]
build = "build.rs"
description = "Decimal floating point arithmetic for Rust"
readme = "README.md"
repository = "https://github.com/alkis/decimal"
documentation = "https://alkis.github.io/decimal"
keywords = ["decimal", "decNumber"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "alkis/decimal" }

[dependencies]
bitflags = "1"
libc = "0.2"
ord_subset = { optional = true, version = "3" }
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "1" }

[features]
default = ["ord_subset", "rustc-serialize", "serde"]

[build-dependencies]
cc = "1"

[dev-dependencies]
serde_json = "1"
