[package]
name = "decimal"
version = "2.4.0"
authors = ["Alkis Evlogimenos <alkis@evlogimenos.com>", "Jonathan Strong <jstrong@tioscapital.com>"]
build = "build.rs"
description = "Decimal floating point arithmetic for Rust"
autobins = false
edition = "2018"

[lib]
name = "decimal"
path = "src/lib.rs"

[[bin]]
path = "src/bytes.rs"
name = "bytes"

[[bin]]
path = "src/to_string.rs"
name = "to-string"

[[bin]]
path = "src/run_test.rs"
name = "run-test"

[dependencies]
bitflags = "1"
libc = "0.2"
ord_subset = { optional = true, version = "3" }
rustc-serialize = { optional = true, version = "0.3" }
serde = { optional = true, version = "1" }
clap = { features = [], version = "2" }
faster = { git = "https://github.com/AdamNiederer/faster", branch = "master", optional = true }
slog = { version = "2", optional = true }
approx = "0.1"

[features]
default = ["ord_subset", "serde", "slog"]

[build-dependencies]
cc = "1"

[dev-dependencies]
serde_json = "1"
rand = "0.4"
decimal-macros = { version = "0.2", path = "decimal-macros" }

[profile.test]
opt-level = 2
